# whisperx-fastapi

./: .gitignore  LICENSE  main.py  pyproject.toml
src/whisperx_fastapi/api/: endpoints.py  models.py
src/whisperx_fastapi/core/: config.py
src/whisperx_fastapi/services/: audio_processing.py  model_manager.py  model_provider.py  srt_utils.py
